[package]

name = "hal"
version = "0.0.4"
description = "A pure rust library for generating Hypertext Application Language (Hal) responses."
license = "MIT"
authors = [ "herman@hermanradtke.com" ]

documentation = "http://hermanradtke.com/hal-rs"
homepage = "http://hermanradtke.com/hal-rs"
repository = "https://github.com/hjr3/hal-rs"

[lib]

name = "hal"

[dependencies]
rustc-serialize = "*"
